# ggwave-kmm

./: LICENSE  README.md  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/cmake/aarch64/Mac OS X/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
composeApp/cmake/amd64/Windows 10/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
composeApp/libs/jni/: libggwave.dylib
composeApp/native/: test-cpp.cpp
composeApp/native/ggwave/: ggwave.cpp
composeApp/native/ggwave/reed-solomon/: gf.hpp  poly.hpp  rs.hpp
composeApp/src/androidMain/: AndroidManifest.xml  CMakeLists.txt
composeApp/src/androidMain/kotlin/com/example/ggwave_multiplatform/: CoreManager.android.kt  GGWave.android.kt  JVMGGWave.kt  MainActivity.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/: App.kt  AppViewModel.kt
composeApp/src/commonMain/kotlin/com/example/ggwave_multiplatform/: CoreManager.kt  GGWave.kt
composeApp/src/desktopMain/: CMakeLists.txt
composeApp/src/desktopMain/kotlin/: main.kt
composeApp/src/desktopMain/kotlin/com/example/ggwave_multiplatform/: CoreManager.jvm.kt  GGWave.jvm.kt
composeApp/src/iosMain/kotlin/: CoreManager.ios.kt  GGWave.kt
composeApp/src/nativeInterop/cinterop/: ggwave.def
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
